<resources>
    <string name="app_name">SurveyApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">SurveyApp</string>
    <string name="enter_correct_user_name">Enter correct user name!</string>
    <string name="enter_correct_password">Enter correct password!</string>
    <string name="error_in_login">Error in login!</string>
    <string name="loading">Loading...</string>

    <string name="action_bar_color">#24862d</string>

    <string name="title_activity_start_survey">StartSurvey</string>
    <string name="start_survey">Start Survey</string>
    <string name="logout">Logout</string>
    <string name="please_enter_correct_info">Please enter correct details!</string>

    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zipcode">Zipcode</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email ID</string>
    <string name="next">Next</string>
    <string name="title_activity_main_start_survey">SurveyApp</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_in_photo_capturing">Your device doesn\'t support capturing images!</string>
    <string name="error_in_croping">Your device doesn\'t support the crop action!</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="gps_settings_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="enter_consumer_name">Enter consumer name!</string>
    <string name="no_question_available">No survey question available!</string>
    <string name="done">Done</string>
    <string name="thanks">Thanks</string>
</resources>
